# zget

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  bootstrap.sh  com.bubroz.zget.plist  com.bubroz.zget.plist.template  pyproject.toml  zget-start.bat  zget-start.command
.github/workflows/: health-check.yml
brain/: README_DRAFT.md.metadata.json  README_DRAFT.md.resolved.0  README_DRAFT.md.resolved.1  implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  implementation_plan.md.resolved.1  implementation_plan.md.resolved.10  implementation_plan.md.resolved.11  implementation_plan.md.resolved.12  implementation_plan.md.resolved.13  implementation_plan.md.resolved.14  implementation_plan.md.resolved.15  implementation_plan.md.resolved.16  implementation_plan.md.resolved.17  implementation_plan.md.resolved.18  implementation_plan.md.resolved.19  implementation_plan.md.resolved.2  implementation_plan.md.resolved.20  implementation_plan.md.resolved.21  implementation_plan.md.resolved.22  implementation_plan.md.resolved.23  implementation_plan.md.resolved.24  implementation_plan.md.resolved.25  implementation_plan.md.resolved.26  implementation_plan.md.resolved.27  implementation_plan.md.resolved.28  implementation_plan.md.resolved.29  implementation_plan.md.resolved.3  implementation_plan.md.resolved.30  implementation_plan.md.resolved.31  implementation_plan.md.resolved.4  implementation_plan.md.resolved.5  implementation_plan.md.resolved.6  implementation_plan.md.resolved.7  implementation_plan.md.resolved.8  implementation_plan.md.resolved.9  task.md  task.md.metadata.json  task.md.resolved.0  (+115 more)
data/: enriched_registry.json  failed_sites.txt  health_log.json  mined_registry.json  regions.json  registry_base.json  registry_metadata.json  research_targets.txt
docs/: INTEGRATION.md
openspec/: AGENTS.md  project.md
scripts/: make_app.sh  make_linux_desktop.sh
src/zget/: __init__.py  __main__.py  cli.py  config.py  cookies.py  core.py  health.py  health.py_snippet  net.py  regions.py  safe_delete.py  smokescreen.py  types.py  utils.py
src/zget/commands/: config.py
src/zget/db/: __init__.py  async_store.py  models.py  store.py
src/zget/mcp/: __init__.py  server.py  tools.py
src/zget/metadata/: __init__.py  librarian_json.py  nfo.py
src/zget/queue/: __init__.py  manager.py
src/zget/server/: app.py  main.py
src/zget/server/portal/: package-lock.json  package.json
src/zget/server/static/: index.html  manifest.json  sw.js  (+2 more)
src/zget/tui/: __init__.py  app.py
tests/: test-videos.md  test_cspan.py  test_librarian_json.py  test_paths.py
(+17 files in other folders)
