[project]
name = "zget"
version = "0.3.0"
description = "The Archivist's Terminal - A modern TUI and SQLite-backed archival engine for video downloads"
authors = [{ name = "Zac Forristall" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.12.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
zget = "zget.cli:main"
zget-mcp = "zget.mcp.server:main"
zget-server = "zget.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
