[project]
name = "zget"
version = "0.4.0"
description = "The Archival Engine - A high-fidelity media archival system with a modular native Web Component Portal"
authors = [{ name = "Zac Forristall" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.1.26",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "pyperclip>=1.8",
    "aiosqlite>=0.22.1",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.0",
    "send2trash>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
zget = "zget.cli:main"
zget-mcp = "zget.mcp.server:main"
zget-server = "zget.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
