[project]
name = "zget"
version = "0.5.0"
description = "Agentic local media capture: yt-dlp library, CLI, and MCP path handoff"
authors = [{ name = "Zac Forristall" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp[default]>=2024.0.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "pyperclip>=1.8",
    "send2trash>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
zget = "zget.cli:main"
zget-mcp = "zget.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
